data/derived/comb/progs/unify/prog5103.ml.out
Characters 97-100:
  | h::t  -> digitalRoot(digits(sumList(n)));;
                                       ^^^
Error: This expression has type int but an expression was expected of type
         int list
